# TestNT

./: .gitignore  Makefile  db.sqlite3  pyproject.toml  requirements.txt
accounts/: forms.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
products/: admin.py  forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_category.py  0003_cart_cartitem.py  0004_alter_productimage_product.py  0005_product_user.py
root/: settings.py  urls.py
templates/auth/: login.html  regester.html
templates/product/: add_product.html  karzinka.html  product_detail.html  product_list.html  product_update.html
